Migrate from SQLite to SQL Server with computed columns support

--- a/TechnicalTestWTW/appsettings.json
+++ b/TechnicalTestWTW/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=TechnicalTestWTW.db"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TechnicalTestWTWDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
